k3s/services/n8n/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: n8n
  name: n8n
  namespace: n8n
spec:
  replicas: 1
  selector:
    matchLabels:
      service: n8n
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        service: n8n
    spec:
      containers:
        - name: n8n
          command:
            - /bin/sh
          args:
            - -c
            - sleep 5; n8n start
          image: n8nio/n8n
          ports:
            - containerPort: 5678
          resources:
            limits:
              memory: 4096Mi
              cpu: "4096m"
            requests:
              memory: 2048Mi
              cpu: "2048m"
          volumeMounts:
            - mountPath: /home/node/.n8n
              name: n8n-claim0
      restartPolicy: Always
      volumes:
        - name: n8n-claim0
          persistentVolumeClaim:
            claimName: n8n-local-data-pvc-11
