k3s/services/n8n/service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: n8n
  name: n8n
spec:
  selector:
    app: n8n
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 5678
  type: LoadBalancer
