k3s/services/n8n/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: n8n-ingress
  namespace: n8n
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - n8n.homelab.kevinlutzer.ca
    secretName: n8n-homelab-kevinlutzer-ca-tls
  rules:
  - host: n8n.homelab.kevinlutzer.ca
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: n8n
              port:
                number: 80
